<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StatAssign5eActivity">

    <EditText
        android:id="@+id/text_input_cha"
        android:layout_width="102dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/string_stat_cha"
        android:inputType="number"
        android:textColor="#777777"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_wis" />

    <EditText
        android:id="@+id/text_input_int"
        android:layout_width="102dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/string_stat_int"
        android:inputType="number"
        android:textColor="#777777"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_con" />

    <EditText
        android:id="@+id/text_input_wis"
        android:layout_width="102dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/string_stat_wis"
        android:inputType="number"
        android:textColor="#777777"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_int" />

    <EditText
        android:id="@+id/text_input_con"
        android:layout_width="102dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/string_stat_con"
        android:inputType="number"
        android:textColor="#777777"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_dex" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_statAssignHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:onClick="statHelp"
        app:fabSize="auto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_help" />

    <TextView
        android:id="@+id/text_Rolls"
        android:layout_width="37dp"
        android:layout_height="336dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="64dp"
        android:lineSpacingExtra="10sp"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_youRolled"
        android:layout_width="80dp"
        android:layout_height="23dp"
        android:layout_marginEnd="40dp"
        android:text="@string/string_youRolled"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/text_Rolls"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/text_input_dex"
        android:layout_width="102dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/string_stat_dex"
        android:inputType="number"
        android:textColor="#777777"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_str" />

    <EditText
        android:id="@+id/text_input_str"
        android:layout_width="102dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/string_stat_str"
        android:inputType="number"
        android:textColor="#777777"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_stat_proceed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="128dp"
        android:onClick="statProceed"
        android:text="@string/string_proceed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>