<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="onClickSignIn">

    <Button
        android:id="@+id/sign_in"
        android:layout_width="146dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="onClickSignIn"
        android:text="@string/title_activity_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sign_out"
        android:layout_width="154dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="24dp"
        android:onClick="onClickSignOut"
        android:text="@string/activity_login_signOut"
        app:layout_constraintBottom_toTopOf="@+id/delete_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/delete_account"
        android:layout_width="144dp"
        android:layout_height="47dp"
        android:layout_marginTop="152dp"
        android:onClick="onClickDeleteAccount"
        android:text="@string/activity_login_delAcc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/display_name"
        android:layout_width="89dp"
        android:layout_height="19dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="44dp"
        android:text="@string/activity_login_displayName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delete_account" />

    <TextView
        android:id="@+id/email"
        android:layout_width="86dp"
        android:layout_height="18dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/fui_email_field_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/display_name" />

    <TextView
        android:id="@+id/uid"
        android:layout_width="86dp"
        android:layout_height="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/activity_login_uid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>