<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StatRollerStyleSelection5e">

    <Button
        android:id="@+id/statSelect5EButton4D6Low"
        android:layout_width="72dp"
        android:layout_height="77dp"
        android:text="@string/statSelect4D6Low"
        android:textAlignment="center"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/statSelect5EImage4D6Low"
        app:layout_constraintStart_toEndOf="@+id/statSelect5EImage4D6Low"
        app:layout_constraintTop_toTopOf="@+id/statSelect5EImage4D6Low" />

    <Button
        android:id="@+id/statSelect5EButton4D6"
        android:layout_width="72dp"
        android:layout_height="77dp"
        android:text="@string/statSelect4D6"
        app:layout_constraintBottom_toBottomOf="@+id/statSelect5EImage4D6"
        app:layout_constraintStart_toEndOf="@+id/statSelect5EImage4D6"
        app:layout_constraintTop_toTopOf="@+id/statSelect5EImage4D6" />

    <ImageView
        android:id="@+id/statSelect5EImage4D6Low"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statSelect5EImage4D6"
        tools:srcCompat="@tools:sample/avatars[8]" />

    <ImageView
        android:id="@+id/statSelect5EImage4D6"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statSelect5EImage3D6"
        tools:srcCompat="@tools:sample/avatars[7]" />

    <Button
        android:id="@+id/statSelect5EButton3D6"
        android:layout_width="72dp"
        android:layout_height="77dp"
        android:text="@string/statSelect3D6"
        app:layout_constraintBottom_toBottomOf="@+id/statSelect5EImage3D6"
        app:layout_constraintStart_toEndOf="@+id/statSelect5EImage3D6"
        app:layout_constraintTop_toTopOf="@+id/statSelect5EImage3D6" />

    <ImageView
        android:id="@+id/statSelect5EImage3D6"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statSelect5EImageD20"
        tools:srcCompat="@tools:sample/avatars[3]" />

    <ImageView
        android:id="@+id/statSelect5EImageD20"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="120dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars[2]" />

    <TextView
        android:id="@+id/statSelectTitleText5E"
        android:layout_width="229dp"
        android:layout_height="70dp"
        android:layout_marginTop="24dp"
        android:text="@string/statRollStyleHeader"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/statSelect5EButtonD20"
        android:layout_width="72dp"
        android:layout_height="77dp"
        android:text="@string/statSelectD20"
        app:layout_constraintBottom_toBottomOf="@+id/statSelect5EImageD20"
        app:layout_constraintStart_toEndOf="@+id/statSelect5EImageD20"
        app:layout_constraintTop_toTopOf="@+id/statSelect5EImageD20"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>