<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateCharacter5eActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_statCharHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:onClick="statHelp"
        app:fabSize="auto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_help" />

    <Spinner
        android:id="@+id/spinner_class"
        android:layout_width="413dp"
        android:layout_height="62dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_race" />

    <TextView
        android:id="@+id/stat_name_cha"
        android:layout_width="114dp"
        android:layout_height="39dp"
        android:layout_marginStart="21dp"
        android:layout_marginBottom="8dp"
        android:text="@string/string_stat_cha"
        android:textAlignment="center"
        android:textColor="#636363"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/stat_show_cha"
        app:layout_constraintStart_toEndOf="@+id/stat_name_wis" />

    <TextView
        android:id="@+id/stat_name_wis"
        android:layout_width="114dp"
        android:layout_height="39dp"
        android:layout_marginStart="21dp"
        android:layout_marginBottom="8dp"
        android:text="@string/string_stat_wis"
        android:textAlignment="center"
        android:textColor="#636363"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/stat_show_wis"
        app:layout_constraintStart_toEndOf="@+id/stat_name_int" />

    <TextView
        android:id="@+id/stat_name_int"
        android:layout_width="114dp"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/string_stat_int"
        android:textAlignment="center"
        android:textColor="#636363"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/stat_show_int"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/stat_name_con"
        android:layout_width="114dp"
        android:layout_height="39dp"
        android:layout_marginStart="21dp"
        android:layout_marginBottom="8dp"
        android:text="@string/string_stat_con"
        android:textAlignment="center"
        android:textColor="#636363"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/stat_show_con"
        app:layout_constraintStart_toEndOf="@+id/stat_name_dex" />

    <TextView
        android:id="@+id/stat_name_dex"
        android:layout_width="114dp"
        android:layout_height="39dp"
        android:layout_marginStart="21dp"
        android:layout_marginBottom="8dp"
        android:text="@string/string_stat_dex"
        android:textAlignment="center"
        android:textColor="#636363"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/stat_show_dex"
        app:layout_constraintStart_toEndOf="@+id/stat_name_str" />

    <TextView
        android:id="@+id/stat_name_str"
        android:layout_width="114dp"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/string_stat_str"
        android:textAlignment="center"
        android:textColor="#636363"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/stat_show_str"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/stat_show_cha"
        android:layout_width="38dp"
        android:layout_height="41dp"
        android:layout_marginStart="96dp"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/stat_show_wis"
        app:layout_constraintStart_toEndOf="@+id/stat_show_wis" />

    <TextView
        android:id="@+id/stat_show_wis"
        android:layout_width="38dp"
        android:layout_height="41dp"
        android:layout_marginStart="96dp"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/stat_show_int"
        app:layout_constraintStart_toEndOf="@+id/stat_show_int" />

    <TextView
        android:id="@+id/stat_show_int"
        android:layout_width="38dp"
        android:layout_height="41dp"
        android:layout_marginStart="54dp"
        android:layout_marginBottom="136dp"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/stat_show_con"
        android:layout_width="38dp"
        android:layout_height="41dp"
        android:layout_marginStart="96dp"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/stat_show_dex"
        app:layout_constraintStart_toEndOf="@+id/stat_show_dex" />

    <TextView
        android:id="@+id/stat_show_dex"
        android:layout_width="38dp"
        android:layout_height="41dp"
        android:layout_marginStart="96dp"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/stat_show_str"
        app:layout_constraintStart_toEndOf="@+id/stat_show_str" />

    <TextView
        android:id="@+id/stat_show_str"
        android:layout_width="38dp"
        android:layout_height="41dp"
        android:layout_marginStart="54dp"
        android:layout_marginBottom="236dp"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinner_race"
        android:layout_width="413dp"
        android:layout_height="62dp"
        android:layout_marginTop="128dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/text_enterText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/string_promptName"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/spinner_race"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/publish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="publishToDatabase"
        android:text="@string/Publish"
        tools:layout_editor_absoluteX="154dp"
        tools:layout_editor_absoluteY="667dp" />

</androidx.constraintlayout.widget.ConstraintLayout>